--- a/Task1_Petra_ReuwsaatPaul.ipynb
+++ b/Task1_Petra_ReuwsaatPaul.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "cell_id": "f30ea7e5ad164ecf890d7ce0de71c844",
     "colab": {
@@ -353,13 +353,16 @@
        "        [ 77.,  64.,  63., ...,  65.,  71.,  66.]]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.savez_compressed('result.npz', result=result)\n",
+    "np.savez_compressed('result.npz', \n",
+    "                    result=result,\n",
+    "                    neurons=neurons,\n",
+    "                    stimulus=stimulus)\n",
     "\n",
     "data = np.load(\"result.npz\")\n",
     "result_loaded = data[\"result\"]\n",
